--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
-	"name": "my test extension",
-	"version": "0.0",
+	"name": "Cache Cleaner",
+	"version": "0.1",
 
 	"browser_action": {
 		"default_title": "test",
@@ -14,6 +14,7 @@
 	},
 	// Permissions
 	"permissions": [
-		"tabs"
+		"tabs",
+		"browsingData"
 	]
 }
