--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
 
 	"browser_action": {
 		"default_title": "test",
-		// "default_popup": "popup.html",
-		"default_icon": "img/fg.png"
+		"default_popup": "popup.html",
+		"default_icon": "img/icon.png"
 	},
 
 	"background": {
