--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 	"browser_action": {
 		"default_title": "test",
 		"default_popup": "popup.html",
-		"default_icon": "img/icon.png"
+		"default_icon": "static/img/icon.png"
 	},
 
 	"background": {
@@ -16,5 +16,5 @@
 	"permissions": [
 		"tabs",
 		"browsingData"
-	]
+	]	
 }
