Message passing OK

--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 	"manifest_version": 2,
 	"name": "Smart Cache Cleaner",
 	"short_name": "Smart Cache Cleaner",
-	"description": "Small extension that cleans your cache a : - hour - day - week from now.",
-	"version": "1.0",
+	"description": "Small extension that cleans your cache a : half hour- hour - day - week from now.",
+	"version": "1.2",
 	"icons": {
 		"16": "static/img/icon.png",
 		"48": "static/img/icon48.png",
