--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
 	"short_name": "Smart Cache Cleaner",
 	"description": "Small extension that cleans your cache a : half hour- hour - day - week from now.",
 	"version": "1.2",
+	"homepage_url": "https://chrome.google.com/webstore/detail/smart-cache-cleaner/mjdjfdpghmnnjmlnoagnlbbmcljcmpkc",
 	"icons": {
 		"16": "static/img/icon.png",
 		"48": "static/img/icon48.png",
