Internationalizing the extension #4

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
 	"author": "Josue Kouka",
 	"manifest_version": 2,
-	"name": "Smart Cache Cleaner",
+	"default_locale": "fr",
+	"name": "__MSG_appName__",
+	"description": "__MSG_appDesc__",
+	// "name": "Smart Cache Cleaner",
 	"short_name": "Smart Cache Cleaner",
-	"description": "Small extension that cleans your cache a : half hour- hour - day - week from now.",
-	"version": "1.3",
+	// "description": "Small extension that cleans your cache a : half hour- hour - day - week from now.",
+	"version": "1.4",
 	"homepage_url": "https://chrome.google.com/webstore/detail/smart-cache-cleaner/mjdjfdpghmnnjmlnoagnlbbmcljcmpkc",
 	"icons": {
 		"16": "static/img/icon.png",
