renaming csspop to csspopup.html

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,9 @@
 	"permissions": [
 		"tabs",
 		"browsingData",
-		"storage"
+		"storage",
+		"http://*/",
+		"file:///*"
 	],
 	"offline_enabled": true
 }
